--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="col-lg-4">
                 <form id="form">
                     <div class="photo mb-3 text-center">
-                        <img src="download.jpg" alt="">
+                        <img src="images/download.jpg" alt="">
                     </div>
                     <fieldset disabled>
                         <div class="mb-0">
                             <div class="col-2">
                                 <label for="number1" class="form-label">Bayern</label>
-                                <img src="bayern-munchen.png" alt="">
+                                <img src="images/bayern-munchen.png" alt="">
                             </div>
                             <div class="col-2">
                                 <input type="number" id="number1" class="form-control">
@@ -43,7 +43,7 @@
                             </div>
                             <div class="col-2">
                                 <label for="number2" class="form-label">Chelsea</label>
-                                <img src="chelsea.png" alt="">
+                                <img src="images/chelsea.png" alt="">
                             </div>
 
 
